docs: updated docs
