# backend/models/resonses.go
@@ -1,0 +1,9 @@
+package models
+
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
